# marmote

./: .gitignore  README.md  TotalReward.cpp  test_average_MDP.cpp  test_continuoustimediscounted_MDP.cpp
lot1_wordpress/: README_Accéder_au_site_wordpress.md
lot1_wordpress/wordpress/: bdd_wordpress (1).sql
lot1_wordpress/wordpress/wp-content/languages/plugins/: password-protected-fr_FR.l10n.php  quiz-master-next-fr_FR-e746fd67f9865a0aba92ee15e70c8b14.json  quiz-master-next-fr_FR-e7501e6f694f15088a665cde7aced956.json  quiz-master-next-fr_FR-ee96d4ad1558ba3fec18629c436b8ffe.json  quiz-master-next-fr_FR.l10n.php  quiz-master-next-fr_FR.mo
lot3-coverage/: FinitHorizon.cpp  testsajoutes.cpp
mdp-marmote/doc/: CMakeLists.txt  Doxyfile.in
mdp-marmote/doc/doxygen-theme/: custom.css
mdp-marmote/doc/html/source/: conf.py  cpp_downloads.rst  cpp_examples.rst  doc_generateArchives.py  index.rst  python_examples.rst
mdp-marmote/doc/html/source/example/: example1.rst  example5.rst  example6.rst  exampleMDP10.rst  exampleMDP11.rst  exampleMDP21.rst  exampleMDP22.rst  exampleMDP31.rst  exampleMDP40.rst
mdp-marmote/doc/html/source/instructions/linux/: compile_linux.rst  run_python_linux.rst
mdp-marmote/doc/html/source/instructions/macos/: compile_macos.rst
mdp-marmote/doc/html/source/instructions/windows/: compile_windows.rst  run_python_windows.rst
mdp-marmote/doc/html/source/media/: IO_example_in2.mcl  example3.cpp  example5.cpp  example5.res  example6.res  exampleMDP10.res  exampleMDP11.res  exampleMDP21.cpp  exampleMDP22.cpp  exampleMDP30.res  exampleMDP40.res
mdp-marmote/doc/html/source/pytutos/: Lesson4.ipynb  Lesson5.ipynb  MDP_Lesson2.ipynb  MDP_Lesson4.ipynb
mdp-marmote/doc/html/source/pytutos/.ipynb_checkpoints/: Lessonx-checkpoint.ipynb  MDP_Lesson1-checkpoint.ipynb
mdp-marmote/doc/latex/: manual.tex
mdp-marmote/doc/latex/Figures/: MarkovZoo_CT.fig  MarkovZoo_DT.fig  example7.fig
wordpress/database/: bdd_wordpress.sql
wordpress/wp-content/languages/plugins/: password-protected-fr_FR.mo  password-protected-fr_FR.po  quiz-master-next-fr_FR-8757682dcc15626a8e70b4f2b31768a8.json  quiz-master-next-fr_FR.po
